Made a fix for the order item thumbnail displaying odd on Safari and iOS devices.

--- a/src/style/components/order.scss
+++ b/src/style/components/order.scss
@@ -40,6 +40,7 @@
               margin-top: 1.57rem;
               .order__grid-item-image {
                 width: 5rem;
+                height: 5rem;
                 margin-right: 1rem;
               }
             }
